brat/test/golden/imports/use-unqualified.brat.golden
Error in test/golden/imports/use-unqualified.brat@FC {start = Pos {line = 4, col = 8}, end = Pos {line = 4, col = 9}}:
main = x
       ^

  x not found in (value) environment

